# mini

./: .gitignore  CMakeLists.txt  Mini.pro  NewQTest.pro  README.md  actions.cpp  appearance.cpp  colorDataTypes.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  mini.pro  refactoringMINI.pro  shortcuts.cpp  stylesheets.cpp  syntaxHighlighter.cpp  syntaxHighlighter.h  syntaxHighlighter.hpp  ui_editor.h
appearance/: appearance.cpp  shortcuts.cpp  stylesheets.cpp  themes.cpp  themes.h
behavior/: actions.cpp  appearance.cpp  shortcuts.cpp
configuration/: configurator.cpp  configurator.hpp
fileBrowser/: fileBrowser.hpp
src/Core/: appearance.cpp  connects.cpp  editor.cpp  editor.hpp  editor.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settings.cpp
src/Core/file/: file.cpp  file.h  file.hpp
src/Environment/: appearance.cpp  configurator.cpp  shortcuts.cpp  stylesheets.cpp  themes.cpp
src/Environment/help/: help.cpp  help.hpp
src/Environment/schemes/: schemes.cpp  schemes.hpp
src/Environment/themes/: schemes.cpp  schemes.h
src/File/: file.cpp
src/Help/: help.cpp  help.hpp  help.ui
src/Schemes/: schemes.hpp
src/Settings/: settings.cpp
src/Syntax/: cppHighlighter.cpp  syntaxHighlighter.cpp  syntaxHighlighter.hpp
src/core/: actions.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/moduleSyntax/: cppHighlighter.cpp  syntaxHighlighter.cpp  syntaxHighlighter.hpp
syntaxHighlighter/: colorDataTypes.hpp  syntaxHighlighter.cpp  syntaxHighlighter.hpp
